feat(log): add logs
